--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/index",
+    "stop": "pm2 stop JD_View",
     "deploy": "pm2 start ./src/index.js --name JD_View"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
     "cron": "^2.0.0",
     "express": "^4.18.1",
     "node-fetch": "^2.6.5",
+    "os-utils": "^0.0.14",
     "ws": "^8.8.1"
   }
 }
